--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mi Página de prueba</title>
+        <title>Prueba</title>
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
         <link rel="icon" href="img/robot2.png">
     </head>
     <body>
-        <h1>Página de Alejandro</h1>
+        <h1>Página de prueba</h1>
         <h2>Binevenida</h2>
-        <p> Bienvenido a mi primera <i>página web</i>.</p>
+        <p> Bienvenido a mi primera <i>página web</i> en GitHub.</p>
         <p> Disfrutad de la visita.</p>
 
         <h2>Listado de formato de texto</h2>
