--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <title>Prueba</title>
-        <link rel="stylesheet" type="text/css" href="css/estilos.css">
-        <link rel="icon" href="img/robot2.png">
+        <link rel="stylesheet" type="text/css" href="estilos.css">
+        <link rel="icon" href="robot.png">
     </head>
     <body>
         <h1>Página de Alejandro</h1>
         <h2>Binevenida</h2>
         <p> Bienvenido a mi primera <i>página web</i> en GitHub.</p>
         <p>Se debe modificar en el gh-pages branch.</p>
+        <p>Elimino subdirectorios</p>
         <p></p>Disfrutad de la visita.</p>
 
         <h2>Listado de formato de texto</h2>
@@ -28,8 +29,8 @@
         
         <h2>Poner imágenes</h2>
 
-        <div align="center"><img src="img/robot.jpg" border="1px" alt="Esto es un robot humanoide blanco"></div>
-        <div align="center"><img src="img/robot2.png" width="275px" border="1px" alt="Esto es un icono de un robot blanco aniñado"></div>
+        <div align="center"><img src="robot.jpg" border="1px" alt="Esto es un robot humanoide blanco"></div>
+        <div align="center"><img src="robot2.png" width="275px" border="1px" alt="Esto es un icono de un robot blanco aniñado"></div>
 
 
 
