--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <p>Con subdirectorios</p>
         <p></p>Disfrutad de la visita.</p>
 
+        <h2>Colaboradores:</h2>
+            <li>alexvidalgg@gmail.com ha aceptado la invitación</li>
+
         <h2>Listado de formato de texto</h2>
         <ul>
             <li>Esto está en <b>negrita</b></li>
