--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Prueba</title>
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
-        <link rel="icon" href="img/robot2.png">
+        <link rel="icon" href="img/robot2.png?">
     </head>
     <body>
         <h1>Página de Alejandro</h1>
