--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </a>
         </DIV>
 
-        <div align="center"><img src="https://vectorportal.com/storage/robot-head-clipart-vectorpo.jpg" width="275px" alt="un robot externo"></div>
+        <div align="center"><img src="https://vectorportal.com/storage/robot-head-clipart-vectorpo.jpg?" width="275px" alt="un robot externo"></div>
         
 
 
